<resources>
    <string name="app_name">FootAndBall </string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_your_password">enter your password</string>
    <string name="sign_in">sign in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="enter_your_username">enter your username</string>
    <string name="login">Login</string>
</resources>
