<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.footballpassion.Login">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="0.06"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="Login"
                android:id="@+id/text"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:layout_weight="0.51" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_your_username"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="#90CAF9"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:imeActionId="@+id/login"
                    android:maxLines="1"
                    android:background="#90CAF9"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/register"
                    android:id="@+id/register"
                    android:textSize="14sp"
                    android:autoLink="all"
                    android:layout_gravity="center"
                    android:textColor="@android:color/holo_blue_dark"

                    />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="238dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:layout_gravity="right"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_gravity="center_horizontal"
                android:id="@+id/forgetPassword"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#2196F3"
                android:padding="10dp"
                />


        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
